--- a/main/appoint/templates/appoint/doctor_dashboard.html
+++ b/main/appoint/templates/appoint/doctor_dashboard.html
@@ -6,8 +6,9 @@
     <div class="dashboard_name">
         <h1>{{ user.get_full_name }}</h1>
     </div>
-    <h1>Create new Appoint</h1>
+    <div class="dashboard_skills">
         <a href="{% url 'create_appoint_doctor' user.pk %}" class="btn btn-dark" role="button">Create appointment</a><br>
-    <h1>Change Appoint</h1>
-    <h1>Delete Appoint</h1>
+        <h1>Change Appoint</h1>
+        <h1>Delete Appoint</h1>
+    </div>
 {% endblock %}
