--- a/appoint/templates/appoint/doctor_detail.html
+++ b/appoint/templates/appoint/doctor_detail.html
@@ -14,6 +14,16 @@
         <div class="doctor_detail_info">
             {{ doctor.info }}
         </div>
+
+        <div class="doctor_detail_photo">
+            {% if photo %}
+                <img src="{{ photo.url }}" alt="doctor_photo">
+            {% endif %}
+        </div>
+
+        {% if user.pk == doctor.pk %}
+            <a href="{% url 'doctor_upload_photo' doctor.pk %}" class="btn btn-info" role="button">Upload photo</a>
+        {% endif %}
     </div>
 
     <a href="{% url 'doctor_appoints' doctor.pk %}" class="btn btn-warning" role="button">Show appointments</a>
