--- a/appoint/templates/appoint/doctor_dashboard.html
+++ b/appoint/templates/appoint/doctor_dashboard.html
@@ -7,7 +7,7 @@
         <h1>{{ user.get_full_name }}</h1>
     </div>
     <div class="dashboard_skills">
-        <a href="{% url 'create_appoint_doctor' user.pk %}" class="btn btn-dark" role="button">Create appointment</a><br>
+        <a href="{% url 'create_appoint' %}" class="btn btn-dark" role="button">Create appointment</a><br>
         <h1>Change Appoint</h1>
         <h1>Delete Appoint</h1>
     </div>
