--- a/appoint/templates/appoint/dashboard.html
+++ b/appoint/templates/appoint/dashboard.html
@@ -7,13 +7,16 @@
         <h1>{{ user.get_full_name }}</h1>
     </div>
     <div class="dashboard_skills">
+      <a href="{% url 'create_appoint' %}" class="btn btn-dark" role="button">Create appointment</a><br>
+      <h1>Change Appoint</h1>
+      <h1>Delete Appoint</h1>
+      {% if is_moderator %}
+        <a href="{% url 'create_few_appoints' %}" class="btn btn-dark" role="button">Create few appointments</a><br>
+
         <a href="{% url 'register_moderator' %}" class="btn btn-warning" role="button">Create moderator</a><br>
         <a href="{% url 'register_doctor' %}" class="btn btn-dark" role="button">Create doctor</a><br>
         <h1>Change Doctor</h1>
         <h1>Delete Doctor</h1>
-        <a href="{% url 'create_appoint' %}" class="btn btn-warning" role="button">Create appointment</a><br>
-        <a href="{% url 'create_few_appoints' %}" class="btn btn-dark" role="button">Create few appointments</a><br>
-        <h1>Change Appoint</h1>
-        <h1>Delete Appoint</h1>
+      {% endif %}
     </div>
 {% endblock %}
